# make-parallel-text

./: .gitignore  1-column.html  2-columns.html  3-columns.html  A.txt  B.txt  Dockerfile  README.md  Rakefile  path-of-alignment.json
input/: left.txt  right.txt
log/: matrix-0-0-0.json  path-0-0-0.json  path-1-154-96.json  path-2-304-215.json  path-3-454-330.json  path-4-604-455.json  path-5-758-570.json
ruby/: render_log.rb
rust/: .gitignore  Cargo.toml  Rakefile
rust/src/: align.rs  context.rs  html.rs  lib.rs  main.rs  search.rs  similarity.rs  split.rs
