cargo-features = ["profile-rustflags"]

[package]
name = "make-parallel-text"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.29", features = ["derive"] }
float_next_after = "1.0.0"
glob = "0.3.2"
nalgebra = "0.33.2"
num = "0.4.3"
ordered-float = "4.6.0"
pathfinding = "4.12.0"
regex = "1.11.1"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", branch = "main", version = "0.23.0" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tch = { version = "0.17.0" }
torch-sys = { version = "0.17.0", default-features = false }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
overflow-checks = false
panic = 'abort'
incremental = false
rustflags = ["-C", "target-cpu=native"]
